# https-github.com-AbhimanyuBatule-auto-job-applier

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: daily_apply.yml
config/: profile.yaml.example  settings.yaml
src/: __init__.py  cli.py
src/ai/: __init__.py  engine.py
src/core/: __init__.py  browser.py  config.py  form_filler.py  orchestrator.py  profile.py
src/portals/: __init__.py  base.py
src/portals/generic_career_page/: adapter.py
src/portals/instahyre/: adapter.py
src/portals/linkedin/: adapter.py
src/portals/naukri/: adapter.py
src/portals/wellfound/: adapter.py
src/scheduler/: __init__.py  scheduler.py
src/tracker/: __init__.py  database.py  sheets.py
src/utils/: __init__.py  cookies.py  logging_config.py  notifications.py
tests/: conftest.py  test_ai_engine.py  test_config.py  test_database.py  test_portals.py  test_profile.py
