[project]
name = "auto-job-applier"
version = "1.0.0"
description = "AI-powered adaptive job application bot"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring real services",
]

[tool.ruff]
line-length = 120
target-version = "py312"
